# mc202

./: CMakeLists.txt  LICENSE  Makefile  README.md  lab01.c  lab02.c  lab03.c  lab05.c  lab07.c
lab04/: acao.c  acao.h  lab04.c  portfolio.c  portfolio.h
lab06/: lab06.c  universidade.c  universidade.h
lab08/: lab08.c  numero_astronomico.c  numero_astronomico.h
lab09/: fila.c  fila.h  jogador.c  jogador.h  lab09.c  pilha.c  pilha.h
lab10/: arvore.c  arvore.h  lab10.c
lab11/: lab11.c  treap.c  treap.h
lab12/: heap.c  heap.h  lab12.c
lab13/: hash.c  hash.h  lab13.c
lab14/: grafo.c  grafo.h  lab14.c
lab15/: grafo.c  grafo.h  lab15.c
miscellaneous/: binary_search_check.c  linked_list.c
